--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,6 @@ services:
       - 8000:80
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    links:
+    depends_on:
       - uwsgi
     restart: always
