--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -1,9 +1,8 @@
 [uwsgi]
 wsgi-file = app.py
 callable = app
-master = true
-processes = 1
+processes = 4
+threads = 2
 socket = uwsgi:3031
-chmod-socket = 666
 vacuum = true
 touch-reload = reload.txt
