--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./app:/var/www
     ports:
-      - 3031:3031
+      - "3031:3031"
     depends_on:
       - mysql
     restart: always
@@ -16,7 +16,7 @@ services:
     image: nginx:latest
     container_name: nginx
     ports:
-      - 8000:80
+      - "8000:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
@@ -31,6 +31,8 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+      - "3306:3306"
 
   phpmyadmin:
     image: phpmyadmin:latest
