--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 'password'
+      TZ: 'Asia/Tokyo'
     ports:
       - "3306:3306"
 
