--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -1,8 +1,19 @@
 [uwsgi]
-wsgi-file = app.py
-callable = app
+# wsgi-file = app.py
+# callable = app
 processes = 4
 threads = 2
 socket = uwsgi:3031
 vacuum = true
 touch-reload = reload.txt
+
+# URLパスごとにアプリをマウント
+mount = /=app:app
+mount = /quiz=quiz.app:app
+mount = /books=books.app:app
+mount = /todo=todo.app:app
+mount = /survey=survey.app:app
+mount = /blog=blog.app:app
+
+# Flask が SCRIPT_NAME を解釈するために必須
+manage-script-name = true
