--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,63 @@ server {
   root /var/www;
   index index.html;
 
+  # ルートアプリの static
+  location /static/ {
+      alias /var/www/static/;
+  }
+
+  # quiz アプリの static
+  location /quiz/static/ {
+      alias /var/www/quiz/static/;
+  }
+
+  # books アプリの static
+  location /books/static/ {
+      alias /var/www/books/static/;
+  }
+
+  # todo アプリの static
+  location /todo/static/ {
+      alias /var/www/todo/static/;
+  }
+
+  # survey アプリの static
+  location /survey/static/ {
+      alias /var/www/survey/static/;
+  }
+
+  # blog アプリの static
+  location /blog/static/ {
+      alias /var/www/blog/static/;
+  }
+
   location / {
-    include uwsgi_params;
-    uwsgi_pass uwsgi:3031;
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /quiz {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /books {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /todo {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /survey {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /blog {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
   }
 }
