--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -15,5 +15,8 @@ mount = /todo=todo.app:app
 mount = /survey=survey.app:app
 mount = /blog=blog.app:app
 
+mount = /other1=other1.app:app
+mount = /other2=other2.app:app
+
 # Flask が SCRIPT_NAME を解釈するために必須
 manage-script-name = true
