--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,6 +35,16 @@ server {
       alias /var/www/blog/static/;
   }
 
+  # other1 アプリの static
+  location /other1/static/ {
+      alias /var/www/other1/static/;
+  }
+
+  # other2 アプリの static
+  location /other2/static/ {
+      alias /var/www/other2/static/;
+  }
+
   location / {
       include uwsgi_params;
       uwsgi_pass uwsgi:3031;
@@ -61,6 +71,16 @@ server {
   }
 
   location /blog {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /other1 {
+      include uwsgi_params;
+      uwsgi_pass uwsgi:3031;
+  }
+
+  location /other2 {
       include uwsgi_params;
       uwsgi_pass uwsgi:3031;
   }
